<resources>
    <string name="app_name">ArduinoController</string>
    <string name="auto_reconnect_on_connection_loss">Auto-reconnect on connection loss</string>
    <string name="connect">Connect</string>
    <string name="not_connected">Not connected</string>
    <string name="led">LED</string>
    <string name="led_on">LED ON</string>
    <string name="led_off">LED OFF</string>
    <string name="get_status">Get Status</string>
    <string name="pwm_value_0">PWM Value: 0</string>
    <string name="logs_n">Logs:\n</string>
    <string name="port" translatable="false">8888</string>
    <string name="ip" translatable="false">192.168.1.199</string>
    <string name="ip_text">Arduino IP Address</string>
    <string name="port_text">Port</string>
    <string name="tab_control">Control</string>
    <string name="tab_settings">Settings</string>
    <string name="status_led_on">Status: LED ON</string>
    <string name="status_led_off">Status: LED OFF</string>
    <string name="logs_disconnected">Disconnected</string>
    <string name="logs_response">Response: %1$s</string>
    <string name="status_connected_to">Connected to %1$s</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="save_settings">Save Settings</string>
    <string name="pwm_value">PWM Value: %1$d</string>

</resources>